# High-Performance-CV

Image Processing/Kernels/: kernel2.hpp  kernels.hpp  main.cpp  opencv_bridge.hpp
Image Processing/Kernels/GaussianDerivatives/include/: GaussianFirstDerivative.hpp  GaussianSecondDerivative.hpp
Image Processing/Kernels/GaussianDerivatives/src/: GaussianFirstDerivative.cpp  GaussianSecondDerivative.cpp
Image Processing/Kernels/Wavelets/Morlet/include/: Morlet.hpp
Image Processing/Kernels/Wavelets/Morlet/src/: Molet.cpp  main.cpp
Image Processing/Kernels/WindowedFourier/AnisotropicGabor/: AnisotropicGabor.cpp  AnisotropicGabor.hpp  CMakeLists.txt  main.cpp
Image Processing/Kernels/WindowedFourier/Gabor/: CMakeLists.txt  main.cpp
Image Processing/Kernels/WindowedFourier/Gabor/include/: GaborComplex.hpp
Image Processing/Kernels/WindowedFourier/Gabor/src/: GaborComplex.cpp  GaborEven.cpp  GaborOdd.cpp
Image Processing/Kernels/WindowedFourier/Steerable/: CMakeLists.txt  Steerable_Fourier.cpp  Steerable_Fourier.hpp  main.cpp
Image Processing/Kernels/WindowedFourier/include/: GaborEven.hpp  GaborOdd.hpp
Image Processing/Preprocessing/Methods/: bayer_filtering.cpp
Learned Representations/Descriptor Learning/: CMakeLists.txt
Learned Representations/Descriptor Learning/include/: patch_dataset.hpp  patch_net.hpp  torch_descriptor.hpp  triplet_loss.hpp
Learned Representations/Descriptor Learning/src/: patch_dataset.cpp  torch_descriptor.cpp  train.cpp
Learned Representations/Embeddings/include/: contrastive_loss.hpp  distance.hpp  embedding.hpp
Learned Representations/Embeddings/src/: contrastive_loss.cpp  distance.cpp  embedding.cpp  image_embedding.cpp
